--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "redux-mock-store": "^1.2.3",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
@@ -43,6 +44,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "enzyme": "^2.8.2",
     "leaflet": "^1.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
